# seaquel

./: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  docker-compose.yml  lefthook.yml  package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.ts
.claude/: napkin.md  web-epic-context.md
.claude/agents/: i18n-translator.md
.github/workflows/: docker-publish.yml  release.yml
build-server/: index.html  learn.html
build-server/_app/: version.json
build-server/learn/: joins.html
e2e/test-databases/: docker-compose.yml  seed.mjs
e2e/test-databases/duckdb/: create-test-db.mjs  schema.sql  seed.mjs  seed.sql
e2e/test-databases/mariadb/: create-test-db.mjs  schema.sql  seed.mjs  seed.sql
e2e/test-databases/mysql/: create-test-db.mjs  schema.sql  seed.mjs  seed.sql
e2e/test-databases/postgresql/: create-test-db.mjs  schema.sql  seed.mjs  seed.sql
e2e/test-databases/shared/: categories.json  fixtures.mjs  order_items.json  orders.json  products.json  users.json
e2e/test-databases/sqlite/: create-test-db.mjs  schema.sql  seed.mjs  seed.sql
e2e/test-databases/sqlserver/: create-test-db.mjs  schema.sql  seed.mjs  seed.sql
messages/: ar.json  de.json  en.json  es.json  fr.json  ko.json
project.inlang/: settings.json
src/: app.html  hooks.server.ts  hooks.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/patches/tauri-plugin-sql/: .cargo_vcs_info.json  Cargo.toml
src-tauri/patches/tauri-plugin-sql/src/decode/: mysql.rs  postgres.rs
src-tauri/src/: auth.rs  duckdb_commands.rs  git.rs  lib.rs  license.rs  logging.rs  main.rs  mssql.rs  server.rs  sql_classify.rs  ssh_tunnel.rs
src-tauri/src/db/: commands.rs  duckdb.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/db/decode/: mysql.rs  postgres.rs  sqlite.rs
src-tauri/tests/: server_api.rs
src/lib/: types.ts  utils.ts
src/lib/api/: tauri.ts
src/lib/auth/: api.ts  role.svelte.ts  token.test.ts  token.ts  users.ts
src/lib/components/: ai-assistant.svelte  ai-mention-popover.svelte  ai-model-switcher.svelte  app-header.svelte  command-palette.svelte  connection-label-picker.svelte  connection-selector.svelte  connection-tab-view.svelte  create-table-view.svelte  data-filter-bar.svelte  data-viewer.svelte  database-switcher.svelte  deep-link-clone-dialog.svelte  deep-link-project-picker-dialog.svelte  delete-confirm-dialog.svelte  destructive-query-confirm-dialog.svelte  drag-split-overlay.svelte  editable-cell.svelte  erd-viewer.svelte  error-toast.svelte  explain-plan-node.svelte  explain-viewer.svelte  extensions-duckdb-tab.svelte  file-drop-overlay.svelte  formatted-cell.svelte  header-tabs.svelte  import-shared-project-dialog.svelte  insert-row-dialog.svelte  language-toggle.svelte  monaco-diff-editor.svelte  monaco-editor.svelte  pane-container.svelte  pane-content.svelte  pane-drag-context.svelte.ts  pending-changes-sheet.svelte  project-settings-dialog.svelte  project-settings-tab-view.svelte  query-editor.svelte  query-history.svelte  query-visual-viewer.svelte  (+12 more)
src/lib/config/: migration-tracks.ts  sample-queries.ts
src/lib/db/: alter-table.ts  column-sources.ts  crud-helpers.ts  duckdb.ts  explain-helpers.ts  index.ts  mssql.ts  mysql.ts  parse-create-table.ts  pending-change-description.ts  postgres.test.ts  postgres.ts  query-params.ts  query-utils.ts  sql-ast-parser.ts  sql-parser.ts  sqlite.ts
src/lib/demo/: init.ts  sample-dashboard.ts  sample-data.ts
src/lib/errors/: handler.ts  index.ts  types.ts
src/lib/features/: index.ts
src/lib/hooks/: database.svelte.ts  query-builder-active-context.ts  query-builder-aggregates.ts  query-builder-ctes.ts  query-builder-parsed-sql.ts  query-builder-serialization.ts  query-builder-sql.ts  query-builder-subqueries.ts  query-builder-tables.ts  query-builder.svelte.ts
src/lib/monaco/: completion-provider.ts  setup.ts
src/lib/providers/: duckdb-provider.ts  duckdb-tauri-provider.ts  http-provider.test.ts  http-provider.ts  index.test.ts  index.ts  provider-registry.ts  tauri-provider.ts  types.ts  unified-tauri-provider.ts  web-sqlite-provider.ts
src/lib/services/: ai-mentions.ts  ai.ts  config-file-parser.ts  dashboard-file-parser.ts  dbeaver-import.ts  deep-link.ts  file-drop.svelte.ts  git.test.ts  git.ts  keyring.test.ts  keyring.ts  mssql.ts  query-file-parser.ts  server-connections.ts  ssh-tunnel.test.ts  ssh-tunnel.ts  tableplus-import.ts  yaml-utils.ts
src/lib/shortcuts/: index.ts  platform.ts  registry.ts  shortcuts.svelte.ts
src/lib/storage/: create-repo.ts  db.ts  index.ts  json-migration.ts  repository.ts  schema.ts  sql.js.d.ts  sqlite-types.ts  tauri-sqlite.ts  tauri-storage.ts  types.ts  web-sqlite.ts  web-storage.ts
src/lib/stores/: ai-settings.svelte.ts  connection-dialog.svelte.ts  connection-wizard.svelte.ts  dbeaver-import.svelte.ts  deep-link-dialog.svelte.ts  deep-link-project-picker.svelte.ts  editor-settings.svelte.ts  license.svelte.ts  onboarding.svelte.ts  pending-changes-settings.svelte.ts  settings-dialog.svelte.ts  shared-project-import.svelte.ts  tableplus-import.svelte.ts  theme.svelte.ts  tutorial-progress.svelte.ts  update.svelte.ts
src/lib/themes/: apply.ts  color-utils.ts  presets.ts
src/lib/tutorial/: criteria.ts  database.ts  schema.ts  sql-parser.ts
src/lib/types/: ai.ts  canvas.ts  chart.ts  connection-tab.ts  create-table.ts  dashboard.ts  data-tab.ts  database.ts  dbeaver.ts  erd.ts  explain.ts  extensions-duckdb.ts  index.ts  pane.ts  pending-changes.ts  persisted.ts  project.ts  query-builder.ts  query.ts  schema.ts  settings-tab.ts  shared-queries.ts  starter-tabs.ts  statistics.ts  tableplus.ts  theme.ts  visualize.ts  workflow.ts
src/lib/utils/: cell-type.ts  child-window.ts  clipboard.ts  connection-string.test.ts  connection-string.ts  dashboard-versions.ts  logger.ts  (+19 more)
src/routes/: +layout.svelte  +page.svelte  layout.css
(+278 files in other folders)
