[package]
name = "seaquel"
version = "2026.4.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seaquel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "json", "time", "rust_decimal"] }
rust_decimal = "1"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
duckdb = { version = "1.1", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "net", "io-util"] }
tiberius = { version = "0.12", default-features = false, features = ["tokio", "chrono", "tds73", "native-tls"] }
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
base64 = "0.22"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.3.2"
arboard = "3.6.1"
image = "0.25.9"
dirs = "5"
tauri-plugin-keyring = "0.1"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
opener = "0.7"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
whoami = "1"
plist = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
log = { version = "0.4", features = ["kv"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

