[package]
name = "seaquel"
version = "2026.4.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seaquel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "seaquel-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
default = ["tauri"]
tauri = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-store",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-os",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-keyring",
    "dep:tauri-plugin-deep-link",
    "dep:tauri-plugin-log",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:arboard",
    "dep:image",
]
server = [
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "tokio/full",
    "dep:hmac",
    "dep:sha2",
    "dep:argon2",
    "dep:sqlparser",
]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "json", "time", "rust_decimal", "ipnetwork", "mac_address", "bit-vec"] }
rust_decimal = "1"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
duckdb = { version = "1.1", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["sync", "net", "io-util", "rt-multi-thread", "macros"] }
tiberius = { version = "0.12", default-features = false, features = ["tokio", "chrono", "tds73", "native-tls"] }
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
base64 = "0.22"
tauri-plugin-os = { version = "2", optional = true }
tauri-plugin-clipboard-manager = { version = "2.3.2", optional = true }
arboard = { version = "3.6.1", optional = true }
image = { version = "0.25.9", optional = true }
dirs = "5"
tauri-plugin-keyring = { version = "0.1", optional = true }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
opener = "0.7"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
whoami = "1"
plist = "1"
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11"
axum = { version = "0.8", features = ["ws"], optional = true }
axum-extra = { version = "0.10", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
sqlparser = { version = "0.54", optional = true }
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
